<resources>
    <string name="app_name">יאללה</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="surprise_me">יאללה הפתעה</string>
    <string name="all_restaurants">כל המסעדות</string>
    <string name="yalla_goodies">Yalla Goodies</string>
    <string name="link_to_yalla_al_haboker_service">link to Yalla-Al-Haboker service</string>
    <string name="milk_based">חלבי</string>
    <string name="vegetarian">צמחוני</string>
    <string name="vegan">טבעוני</string>
    <string name="all">הכל</string>
    <string name="meat_based">בשרי</string>
    <string name="search">חיפוש</string>
    <string name="home">בית</string>
    <string name="search_yalla">חפשו ב-Yalla…</string>
    <string name="mehadrin">מהדרין</string>
    <string name="asian">אסייתי</string>
    <string name="italian">איטלקי</string>
    <string name="burger">המבורגר</string>
    <string name="pizza">פיצה</string>
    <string name="sushi">סושי</string>
    <string name="separator">❁</string>
    <string name="bike_icon">bike icon</string>
    <string name="restaurant_poster">restaurant poster</string>
    <string name="like_the_restaurant_button">like the restaurant button</string>
    <string name="change_destination">change destination</string>
    <string name="back_to_previous_screen">back to previous screen</string>
    <string name="dish_poster">dish poster</string>
    <string name="where_do_we_send_the_order">לאן מזמינים?</string>
    <string name="wallpaper">wallpaper</string>
    <string name="no_internet_connection">אין חיבור אינטרנט</string>
    <string name="try_again">נסה שוב</string>
    <string name="arrow_back">arrow back</string>
    <string name="where_exactly">לאן להגיע?</string>
    <string name="house_number">מספר בית *</string>
    <string name="apt_number">מספר דירה (אם יש)</string>
    <string name="entrance">כניסה (אם יש)</string>
    <string name="street">רחוב *</string>
    <string name="location_instructions">הנחיות לשליח</string>
    <string name="done">סיימתי</string>
    <string name="adaptive_title">לאן להגיע ב%s?</string>
    <string name="obligated_field">זהו שדה חובה</string>
    <string name="min_street_length">על שם הרחוב להיות באורך 2 תווים לפחות</string>
    <string name="confirm">אישור</string>
    <string name="edit">עריכה</string>
    <string name="full_address_summary"> %s %s, %s.</string>
    <string name="none">אין</string>
    <string name="delivery_instructions">הנחיות לשליח:</string>
    <string name="delivery_address">כתובת למשלוח:</string>
    <string name="apt_summary">דירה:%s</string>
    <string name="entrance_summary">כניסה:%s</string>
    <string name="delivery_to">במשלוח ל%s</string>
    <string name="coming_soon">בקרוב!</string>
    <string name="firm_logo">Firm Logo</string>
    <string name="selection_cleared">בחירה נוקתה</string>
    <string name="delivery_time_is">עד %d דקות</string>
    <string name="address">"%s %d, %s"</string>
    <string name="opening_hours">"%s-%s"</string>
    <string name="out_of_stock">אזל!</string>
    <string name="hot_restaurants">מסעדות חמות באזור 🔥</string>
    <string name="hot_offers">הצעות שוות 💰</string>
    <string name="already_enjoyed">כבר אהבתם 🤤</string>
    <string name="add_to_cart">הוסף להזמנה ₪%,.2f</string>
    <string name="notes_to_the_restaurant">משהו להגיד למסעדה?</string>
    <string name="plus">➕</string>
    <string name="minus">➖</string>
    <string name="diner_name">שם הסועד</string>
    <string name="price_in_nis">₪%,.2f</string>
    <string name="addition_name_with_price">%s - ₪%,.2f</string>
    <string name="addition_out_of_stock">%S - אזל</string>
    <string name="one">1</string>
    <string name="im_done">סיימתי</string>
    <string name="remove_item_from_cart">remove item from cart</string>
    <string name="successfully_added_to_cart">הפריט נוסף לעגלה</string>
    <string name="cart_is_empty">העגלה נוקתה</string>
    <string name="order_completed">ההזמנה הושלמה בהצחלה!</string>
    <string name="not_opened_yet">"תפתח בשעה %S"</string>
    <string name="already_closed">"סגורה כעת"</string>
    <string name="closing_soon">"תסגר בעוד %S דקות"</string>
    <string name="cart_button">cart_button</string>
    <string name="dish_bottom_container">dish bottom container</string>
</resources>