<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nav.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/ad_frame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_hebrew_bold"

                android:text="שטח פרסום" />
        </FrameLayout>

        <TextView
            android:id="@+id/textHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/open_sans_hebrew_bold"
            android:labelFor="@id/rv_hot_restaurants"
            android:text="@string/hot_restaurants"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/open_sans_hebrew_bold"
            android:labelFor="@id/rv_hot_offers"
            android:text="@string/hot_offers"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl" />


        <TextView
            android:id="@+id/tv_liked_restaurants_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/open_sans_hebrew_bold"
            android:labelFor="@id/rv_liked_restaurants"
            android:text="@string/already_enjoyed"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_liked_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>