<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <ImageView
            android:id="@+id/hot_offer_poster"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/dish_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_hot_offer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_hebrew_bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/hot_offer_poster"
            tools:text="שם מנה" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_hot_offer_name"
            tools:text="₪49.00" />

        <TextView
            android:id="@+id/tv_hot_offer_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/guideline_88"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hot_offer_name"
            tools:text="תיאור מנה תיאור מנה תיאור מנה תיאו" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/pale_smoky_white"
            app:layout_constraintTop_toTopOf="@id/guideline_88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_kosher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_88"
            tools:text="כשר כשר" />

        <TextView
            android:id="@+id/tv_text_separator1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            android:text="@string/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_kosher"
            app:layout_constraintTop_toTopOf="@+id/tv_kosher" />


        <TextView
            android:id="@+id/tv_kosher_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_text_separator1"
            app:layout_constraintTop_toTopOf="@+id/tv_text_separator1"
            tools:text="גרופ גרופ" />

        <TextView
            android:id="@+id/tv_text_separator2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            android:text="@string/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_kosher_group"
            app:layout_constraintTop_toTopOf="@+id/tv_kosher_group" />


        <TextView
            android:id="@+id/tv_out_of_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans_hebrew_regular"
            android:text="@string/out_of_stock"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_text_separator2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_text_separator2"
            tools:visibility="visible" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
